--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,11 @@
     "@tailwindcss/vite": "^4.1.18",
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
+    "jspdf": "^4.0.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.563.0",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^4.0.379",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-dropzone": "^14.3.8",
